Correct important error in map