@@ -2,6 +2,7 @@ package fr.combine.tuple;
 
 import fr.combine.util.Util;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -36,7 +37,7 @@ public class Pair<A, B> implements Tuple {
 
     @Override
     public List<Object> toList() {
-        return List.of(first, second);
+        return Arrays.asList(first, second);
     }
 
 }
