@@ -2,6 +2,7 @@ package fr.combine.tuple;
 
 import fr.combine.util.Util;
 
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -57,6 +58,6 @@ public class Quintet<A, B, C, D, E> implements Tuple {
 
     @Override
     public List<Object> toList() {
-        return List.of(first, second, third, fourth, fifth);
+        return Arrays.asList(first, second, third, fourth, fifth);
     }
 }
